Finish website build

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 	</header>
 
 	<section id="home-info" class="bg-dark">
-		<div class="info-img">
-			<img src="" alt="">
-		</div>
+		<div class="info-img"></div>
 		<div class="info-content">
 			<h2>
 				<span class="text-primary">The History</span> Of Our Hotel
